--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,6 +12,7 @@ spring:
     host: 127.0.0.1
     port: 6379
     password: 123456
+    database: 0
     lettuce:
       pool:
         max-active: 10
