--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,4 +25,4 @@ mybatis-plus:
   type-aliases-package: com.hmdp.entity # 别名扫描包
 logging:
   level:
-    com.hmdp: debug
+    pers.xxiangyeyu: debug
